tests/e2e/inline_service_output4.error
Error: syntax error in story at line 1, column 25

1|    a = "{listen command as client}"
                              ^^^^^^

E0109: Inline service calls can't define an output
